--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
+    "core-js": "^3.42.0",
+    "regenerator-runtime": "^0.14.1",
     "vue": "^2.6.14"
   },
   "devDependencies": {
